# Csano97

./: .gitignore
week-01/day-3/AnimalsAndLegs/: main.cpp
week-01/day-3/AverageofInput/: CMakeLists.txt  main.cpp
week-01/day-3/BMI/: main.cpp
week-01/day-3/CodingHours/: main.cpp
week-01/day-3/ConditionalVariableMutation/: main.cpp
week-01/day-3/CountFromTo/: main.cpp
week-01/day-3/Cuboid/: main.cpp
week-01/day-3/DefineBasicInfo/: main.cpp
week-01/day-3/DrawChessTable/: main.cpp
week-01/day-3/DrawTriangle/: main.cpp
week-01/day-3/EvenPrint/: CMakeLists.txt  main.cpp
week-01/day-3/FavoriteNumber/: main.cpp
week-01/day-3/FizzBuzz/: main.cpp
week-01/day-3/GuessTheNumber/: main.cpp
week-01/day-3/HelloOthers/: main.cpp
week-01/day-3/HelloUser/: main.cpp
week-01/day-3/IntroduceYourself/: main.cpp
week-01/day-3/IwontCheatOnTheExams/: CMakeLists.txt  main.cpp
week-01/day-3/Mileto/: CMakeLists.txt  main.cpp
week-01/day-3/MultiplicationTable/: main.cpp
week-01/day-3/OddEven/: main.cpp
week-01/day-3/OneTwoALot/: main.cpp
week-01/day-3/PartyIndicator/: main.cpp
week-01/day-3/PrintBigger/: main.cpp
week-01/day-3/Swap/: main.cpp
week-01/day-3/TwoNumbers/: main.cpp
week-01/day-3/VariableMutation/: main.cpp
week-01/day-3/humpty/: CMakeLists.txt
week-01/day-3/secondsinaday/: CMakeLists.txt  main.cpp
week-01/day-5/: AppendA.cpp  AppendAfunc.cpp  CMakeLists.txt  ChangeElement.cpp  Colors.cpp  CompareLength.cpp  DiagonalMatrix.cpp  DoubleItems.cpp  Doubling.cpp  Greet.cpp  IncrementElement.cpp  PrintAll.cpp  Sum.cpp  SumAll.cpp  SumElements.cpp  SwapElements.cpp  Third.cpp
week-10/snake_game/: .cproject  .mxproject  .project  snake_game.elf.launch  snake_game.ioc
week-10/snake_game/Inc/: main.h  stm32f7xx_it.h
week-10/snake_game/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
week-2/day-1/: CMakeLists.txt  Reverse.cpp  SimpleReplace.cpp  TakesLonger.cpp  TodoPrint.cpp  URLFixer.cpp
week-2/day-1/DataStructures/: CMakeLists.txt  ListIntroduction1.cpp  ListIntroduction2.cpp  MapIntroduction1.cpp  MapIntroduction2.cpp  PersonalFinance.cpp  ProductDatabase.cpp  ProductDatabase2.cpp  ShoppingList.cpp  ShoppingList2.cpp  Telephonebook.cpp
week-2/day-2/: Adding.cpp  CMakeLists.txt  ChangeValue.cpp  FindMinimum.cpp  FiveNumbers.cpp  LookForMaximum.cpp  LookForValue.cpp  PointerType.cpp  PrintAddresses.cpp  PrintValue.cpp  Swap.cpp
week-2/day-3/: CMakeLists.txt  CenteredBox.cpp  CenteredSquare.cpp  ColoredBox.cpp  ConnectTheDots.cpp  Diagonals.cpp  FourRect.cpp  GoToCenter.cpp  HorizontalLine.cpp  MiddleLines.cpp  PositionSquare.cpp  ProjectPyramid.cpp  PurpleSteps.cpp  Purples3d.cpp  RainbowBox.cpp  main.cpp
week-2/day-5/: CMakeLists.txt
week-3/day-1/: CMakeLists.txt  CopyFile.cpp  CountLines.cpp  DivideByZero.cpp  Logs.cpp  PrintEachLine.cpp  WriteMultipleLines.cpp  WriteSingleLine.cpp
week-3/day-3/: Animal.cpp  AnimalClass.cpp  AnimalClass.h  Blogpost.cpp  BlogpostClass.cpp  BlogpostClass.h  CMakeLists.txt  CounterTest.cpp  FleetThings.cpp  PokemonMain.cpp  PostItmain.cpp  Sharpie.cpp  SharpiePen.cpp  SharpiePen.h  counter.cpp  counter.h  dice.cpp  dice_set.cpp  dice_set.h  dominomain.cpp  fleet.cpp  pokemon.cpp  pokemon.h
week-3/day-5/: CMakeLists.txt  SierpinskyCarpet.cpp  main.cpp  recursive_triangle.cpp
week-3/day-5_recursion/: Bunnies.cpp  CMakeLists.txt  GreatestCommonDivisor.cpp  fibonacci.cpp  numberadder.cpp  sumdigit.cpp
week-4/day-1/: CMakeLists.txt
week-4/day-1/Garden/: Flowers.h  Garden.h  Trees.h
week-4/day-1/Green-Fox/: Cohort.cpp  Cohort.h  Mentor.cpp  Mentor.h  Person.cpp  Person.h  Sponsor.cpp  Sponsor.h  Student.cpp  Student.h  main.cpp
week-4/day-2/: CMakeLists.txt
week-4/day-2/Devices/: Copier.cpp  Copier.h  Printer.cpp  Printer.h  Printer2D.cpp  Printer2D.h  Printer3D.cpp  Printer3D.h  Scanner.cpp  Scanner.h  main.cpp
week-4/day-2/Instruments/: BassGuitar.cpp  BassGuitar.h  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h  main.cpp
week-4/day-2/WirelessAdapter/: Device.cpp  Device.h  NetworkDevice.cpp  NetworkDevice.h  USBDevice.cpp  USBDevice.h  WirelessAdapter.cpp  WirelessAdapter.h  main.cpp
week-4/day-3/MyApp/: CMakeLists.txt  main.cpp
week-6/cuboid/: main.c
week-6/day-1/cuboid/: CMakeLists.txt
week-6/day-1/guess_the_number/: main.c
week-6/day-1/introduce_yourself/: main.c
week-6/day-1/old_enough/: CMakeLists.txt  main.c
week-6/day-1/pi_c/: Separate.h  main.c
week-6/day-1/prime/: main.c
week-6/day-1/sum_of_digits/: main.c
week-6/day-2/Computer/: main.c
week-6/day-2/car/: main.c
week-6/day-2/count_lines/: main.c
week-6/day-2/print_each_line/: main.c  my_file.txt
week-6/day-2/sandwich/: main.c
week-6/day-2/smartphones/: CMakeLists.txt  main.c
week-6/day-2/write_multiple_lines/: main.c  my-file.txt
week-6/day-2/write_single_line/: main.c
week-6/day-3/calloc/: main.c
week-6/day-3/deallocate/: CMakeLists.txt  main.c
week-6/day-3/malloc/: main.c
week-6/day-3/merge/: main.c
week-6/day-4/vector/: main.c  vector.c  vector.h
week-6/equal/: CMakeLists.txt  equal_checker.h  main.c
week-6/hello_me/: main.c
week-6/hello_others/: main.c
week-6/length/: main.c
week-6/odd_or_even/: main.c
week-6/pi_c/: CMakeLists.txt  main.c
week-6/sum_of_digits/: main.c
week-6/two numbers/: main.c
week-7/day-1/: .cproject  .mxproject  .project  STM_project.ioc
week-7/day-1/Src/: main.c
week-7/day-4_5/: .cproject  .mxproject  .project  reaction_time_game.elf.launch  reaction_time_game.ioc
week-8/day-1/: .project  blinking_led.ioc
(+104 files in other folders)
