cmake_minimum_required(VERSION 3.14)
project(day-5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Third Third.cpp)
add_executable(SumElements SumElements.cpp)
add_executable(CompareLength CompareLength.cpp)
add_executable(ChangeElement ChangeElement.cpp)
add_executable(IncrementElement IncrementElement.cpp)