cmake_minimum_required(VERSION 3.14)
project(day-5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Third Third.cpp)
add_executable(SumElements SumElements.cpp)
add_executable(CompareLength CompareLength.cpp)
add_executable(ChangeElement ChangeElement.cpp)
add_executable(IncrementElement IncrementElement.cpp)
add_executable(PrintAll PrintAll.cpp)
add_executable(DiagonalMatrix DiagonalMatrix.cpp)
add_executable(DoubleItems DoubleItems.cpp)
add_executable(Colors Colors.cpp)
add_executable(AppendA AppendA.cpp)
add_executable(SwapElements SwapElements.cpp)
add_executable(SumAll SumAll.cpp)
add_executable(Doubling Doubling.cpp)