cmake_minimum_required(VERSION 3.14)
project(day_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(PointerType PointerType.cpp)
add_executable(PrintValue PrintValue.cpp)
add_executable(ChangeValue ChangeValue.cpp)
add_executable(Adding Adding.cpp)
add_executable(FindMin FindMinimum.cpp)
add_executable(Swap Swap.cpp)
add_executable(PrintAddresses PrintAddresses.cpp)
add_executable(FiveNumbers FiveNumbers.cpp)
add_executable(LookForV LookForValue.cpp)
add_executable(LookForM LookForMaximum.cpp)