cmake_minimum_required(VERSION 3.14)
project(day_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(dividebyzero DivideByZero.cpp)
add_executable(printeachline PrintEachLine.cpp)
add_executable(countlines CountLines.cpp)
add_executable(writesingle WriteSingleLine.cpp)
add_executable(writemultiple WriteMultipleLines.cpp)
add_executable(copy CopyFile.cpp)
add_executable(logs Logs.cpp)