cmake_minimum_required(VERSION 3.14)
project(DataStructures)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructures ListIntroduction1.cpp)
add_executable(MapIntroduction1 MapIntroduction1.cpp)
add_executable(Listintro ListIntroduction2.cpp)
add_executable(MapIntroduction2 MapIntroduction2.cpp)
add_executable(PersonalFinance PersonalFinance.cpp)
add_executable(Telephone Telephonebook.cpp)
add_executable(Shopping ShoppingList.cpp)
add_executable(Database ProductDatabase.cpp)
add_executable(Database2 ProductDatabase2.cpp)
add_executable(Shopping2 ShoppingList2.cpp)